--- a/NOTEBOOKS/artificial_neural_network.ipynb
+++ b/NOTEBOOKS/artificial_neural_network.ipynb
@@ -52,7 +52,7 @@
         "In the artificial neural network, we have mathematical units known as artificial neurons that are connected with each other. And these neuron units are fired using the activation functions which is nothing but a mathematical function itself.<br><br>\n",
         "The below diagram explains this concept and comparison between the biological neuron and artificial neuron.\n",
         "<center>\n",
-        "<img src=\"https://raw.githubusercontent.com/fabnancyuhp/DEEP-LEARNING/main/IMAGE/DENSENN/Activation_Function.png\" width=\"55%\" />\n",
+        "<img src=\"https://raw.githubusercontent.com/fabnancyuhp/DEEP-LEARNING/main/IMAGE/DENSENN/Activation_Function.png\" width=\"50%\" />\n",
         "</center>"
       ],
       "metadata": {
@@ -65,7 +65,7 @@
         "## ReLU Activation Function :\n",
         "The Rectified Linear Unit has become very popular in the last few years. It computes the function $f(x)=\\max(0,x)$. In other words, the activation is simply thresholded at zero.\n",
         "<center>\n",
-        "<img src=\"https://raw.githubusercontent.com/fabnancyuhp/DEEP-LEARNING/main/IMAGE/DENSENN/relu.png\" width=\"40%\" />\n",
+        "<img src=\"https://raw.githubusercontent.com/fabnancyuhp/DEEP-LEARNING/main/IMAGE/DENSENN/relu.png\" width=\"20%\" />\n",
         "</center>"
       ],
       "metadata": {
@@ -78,7 +78,7 @@
         "### Leaky ReLU Activation Function: \n",
         "Leaky ReLUs are one attempt to fix the “dying ReLU” problem. Instead of the function being zero when x < 0, a leaky ReLU will instead have a small positive slope (of 0.01, or so). That is, the function computes $f(x)=\\alpha x\\mathbb{1}_{x<0}(x)+x\\mathbb{1}_{x\\geq 0}(x)$\n",
         "<center>\n",
-        "<img src=\"https://raw.githubusercontent.com/fabnancyuhp/DEEP-LEARNING/main/IMAGE/DENSENN/leakyrelu.png\" width=\"40%\" />\n",
+        "<img src=\"https://raw.githubusercontent.com/fabnancyuhp/DEEP-LEARNING/main/IMAGE/DENSENN/leakyrelu.png\" width=\"20%\" />\n",
         "</center>"
       ],
       "metadata": {
@@ -91,7 +91,7 @@
         "## Sigmoid Activation Function\n",
         "The sigmoid Activation Function has the mathematical form $\\sigma(x)=\\frac{1}{1+\\exp(-x)}$. The sigmoid activation function takes a real-valued number and “squashes” it into range between 0 and 1. In particular, large negative numbers become 0 and large positive numbers become 1.\n",
         "<center>\n",
-        "<img src=\"https://raw.githubusercontent.com/fabnancyuhp/DEEP-LEARNING/main/IMAGE/DENSENN/sigmoid.png\" width=\"40%\" />\n",
+        "<img src=\"https://raw.githubusercontent.com/fabnancyuhp/DEEP-LEARNING/main/IMAGE/DENSENN/sigmoid.png\" width=\"20%\" />\n",
         "</center>"
       ],
       "metadata": {
@@ -104,7 +104,7 @@
         "## Tanh Activation Function\n",
         "The Tanh Activation Function squashes a real-valued number to the range $[-1, 1]$. Like the sigmoid neuron, its activations saturate, but unlike the sigmoid neuron its output is zero-centered. Therefore, in practice the tanh non-linearity is always preferred to the sigmoid nonlinearity. Also note that the tanh neuron is simply a scaled sigmoid neuron, in particular the following holds $\\tanh(x) =2\\sigma(2x)-1=\\frac{1-\\exp(-2x)}{1+\\exp(-2x)} $.\n",
         "<center>\n",
-        "<img src=\"https://raw.githubusercontent.com/fabnancyuhp/DEEP-LEARNING/main/IMAGE/DENSENN/tanh.png\" width=\"40%\" />\n",
+        "<img src=\"https://raw.githubusercontent.com/fabnancyuhp/DEEP-LEARNING/main/IMAGE/DENSENN/tanh.png\" width=\"20%\" />\n",
         "</center>\n"
       ],
       "metadata": {
@@ -132,7 +132,7 @@
         "**Neural networks is a graph of neurons**. Neural Networks are modeled as collections of neurons that are connected in an acyclic graph. In other words, the outputs of some neurons can become inputs to other neurons. Cycles are not allowed since that would imply an infinite loop in the forward pass of a network. Instead of an amorphous blobs of connected neurons, Neural Network models are often organized into distinct layers of neurons. For regular neural networks, the most common layer type is the **fully-connected layer** in which neurons between two adjacent layers are fully pairwise connected, but neurons within a single layer share no connections. Below are two example Neural Network topologies that use a stack of fully-connected layers:\n",
         "<div class=\"fig figcenter fighighlight\">\n",
         "  <img src=\"https://raw.githubusercontent.com/fabnancyuhp/DEEP-LEARNING/main/IMAGE/DENSENN/neural_net.jpeg\" width=\"40%\" />\n",
-        "  <img src=\"https://raw.githubusercontent.com/fabnancyuhp/DEEP-LEARNING/main/IMAGE/DENSENN/neural_net2.jpeg\" width=\"55%\" style=\"border-left: 1px solid black;\" />\n",
+        "  <img src=\"https://raw.githubusercontent.com/fabnancyuhp/DEEP-LEARNING/main/IMAGE/DENSENN/neural_net2.jpeg\" width=\"50%\" style=\"border-left: 1px solid black;\" />\n",
         "  <div class=\"figcaption\"><b>Left:</b> A 2-layer Neural Network (one hidden layer of 4 neurons (or units) and one output layer with 2 neurons), and three inputs. <b>Right:</b> A 3-layer neural network with three inputs, two hidden layers of 4 neurons each and one output layer. Notice that in both cases there are connections between neurons across layers, but not within a layer.</div>\n",
         "</div>"
       ],
@@ -166,7 +166,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# MATHEMATICAL NOTATION and forward propagation\n"
+        "# Forward propagation\n"
       ],
       "metadata": {
         "id": "n8Pig78avGfc"
@@ -199,7 +199,9 @@
         "* $z^{[i]}=W^{[i]}a^{[i-1]}+b^{[i]}$ and $a^{[i]}=\\sigma^{[i]}(z^{[i]})=\\sigma^{[i]}(z^{[i]})=[\\sigma^{[i]}(z^{[i]}_{1}),\\dots,\\sigma^{[i]}(z^{[i]}_{n^{[i]}})]^{T}$\n",
         "* ...\n",
         "* $z^{[m]}=W^{[m]}a^{[m-1]}+b^{[m]}$ and $a^{[m]}=\\sigma^{[m]}(z^{[m]})=\\sigma^{[m]}(z^{[m]})=[\\sigma^{[m]}(z^{[m]}_{1}),\\dots,\\sigma^{[m]}(z^{[m]}_{n^{[m]}})]^{T}$.\n",
-        "* The output-vector is $\\hat{y}=a^{[m]}=\\sigma^{[m]}(z^{[m]})$. "
+        "* The output-vector is $\\hat{y}=a^{[m]}=\\sigma^{[m]}(z^{[m]})$. \n",
+        "\n",
+        "$\\hat{y}^{(i)}$ denots the Neural Network output corresponding to the input $x^{(i)}$. For all i, $\\hat{y}^{(i)}$ depends of the parameters $W^{[1]},\\dots,W_{[m]},b^{[1]},\\dots,b^{[m]}.$ "
       ],
       "metadata": {
         "id": "tBzepsvxvGfn"
@@ -208,13 +210,17 @@
     {
       "cell_type": "markdown",
       "source": [
-        "$\\hat{y}^{(i)}$ denots the Neural Network output corresponding to the input $x^{(i)}$. For all i, $\\hat{y}^{(i)}$ depends of the parameters $W^{[1]},\\dots,W_{[m]},b^{[1]},\\dots,b^{[m]}$. \n",
         "We introduce the loss function $\\mathcal{L}$ that allow us to measure the difference between $\\hat{y}^{(i)}$ and the $y^{(i)}$ for all i. The cost function of the overall training sample is given by\n",
         "$$C(W,b)=\\frac{1}{n}\\sum_{i=1}^{n}\\mathcal{L}(\\hat{y}^{(i)},y^{(i)}) $$ \n",
         "\n",
         "When we deal with a classification problem, the loss function can be chosen from the following:\n",
-        "* categorical_crossentropy: $\\mathcal{L}(\\hat{y}^{(i)},y^{(i)})=-\\sum_{k=1}^{p}y^{(i)}_{k}\\log(\\hat{y}^{(i)}_{k})$ where p is the output size and $\\hat{y}^{(i)}$ is a probability vector.\n",
-        "* binary_crossentropy (The target can contain multiple independent binary labels): $-\\frac{1}{m}\\sum_{k=1}^{p}y^{(i)}\\log(\\hat{y}^{(i)}_{k})+(1-y^{(i)}_{k})\\log(1-\\hat{y}^{(i)}_{k})$ where p is the output size and $\\hat{y}^{(i)}_{k}$ is a probability vector.\n",
+        "* categorical_crossentropy: \n",
+        "<center>\n",
+        "<img src=\"https://raw.githubusercontent.com/fabnancyuhp/DEEP-LEARNING/main/IMAGE/DENSENN/loss1.png\" width=\"40%\" style=\"width:600px;margin:0-300px;\" />\n",
+        "</center>\n",
+        "\n",
+        " where p is the output size and $\\hat{y}^{(i)}$ is a probability vector.\n",
+        "* binary_crossentropy (The target can contain multiple independent binary labels): $$\\mathcal{L}(\\hat{y}^{(i)},y^{(i)})=-\\frac{1}{m}\\sum_{k=1}^{p}y^{(i)}\\log(\\hat{y}^{(i)}_{k})+(1-y^{(i)}_{k})\\log(1-\\hat{y}^{(i)}_{k})$$ where p is the output size and $\\hat{y}^{(i)}_{k}$ is a probability vector.\n",
         "\n",
         "When we deal with a regression problem, the loss function can be chosen from the following:\n",
         "* Mean squared error: $\\mathcal{L}(\\hat{y}^{(i)},y^{(i)})=\\frac{1}{p}\\sum_{k=1}^{p}(y^{(i)}_{k}-\\hat{y}^{(i)}_{k})^{2}$\n",
@@ -256,6 +262,15 @@
     {
       "cell_type": "markdown",
       "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "akaHv_1begEj"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "#  Backpropagation algorithm : the heart  of neural network training. \n",
         "Backpropagation refers to the method of calculating the gradient of neural network parameters. In short, the method traverses the network in reverse order, from the output to the input layer, according to the chain rule from calculus. The algorithm stores any intermediate variables (partial derivatives) required while calculating the gradient with respect to some parameters.<br><br>\n",
         "Backpropagation is just a very computationally efficient approach to compute the derivatives of the objective function $J(W,b)$ and our goal is to use those derivatives to learn the weight coefficients for parameterizing a multi-layer artificial neural network.<br><br>\n",
@@ -265,7 +280,7 @@
         "\n",
         "\n",
         "<center>\n",
-        "<img src=\"https://raw.githubusercontent.com/fabnancyuhp/DEEP-LEARNING/main/IMAGE/DENSENN/diagram-of-backpropagation-training-algorithm-and-typical-neuron-model_W640.jpg\" width=\"50%\" />\n",
+        "<img src=\"https://raw.githubusercontent.com/fabnancyuhp/DEEP-LEARNING/main/IMAGE/DENSENN/diagram-of-backpropagation-training-algorithm-and-typical-neuron-model_W640.jpg\" width=\"40%\" />\n",
         "</center>\n",
         "\n",
         "* After propagating the input features forward to the output layer through the various hidden layers consisting of different/same activation functions, we come up with a predicted probability of a sample belonging to the positive class ( generally, for classification tasks).\n",
@@ -302,11 +317,11 @@
       "source": [
         "In Stochastic Gradient Descent, you use only 1 training example before updating the gradients. When the training set is large, SGD can be faster. But the parameters will \"oscillate\" toward the minimum rather than converge smoothly. Here is an illustration of this (The illustration below comes from Andrew Ng's mooc):\n",
         "<center>\n",
-        "<img src=\"https://raw.githubusercontent.com/fabnancyuhp/DEEP-LEARNING/main/IMAGE/DENSENN/kiank_sgd.png\" width=\"70%\" />\n",
+        "<img src=\"https://raw.githubusercontent.com/fabnancyuhp/DEEP-LEARNING/main/IMAGE/DENSENN/kiank_sgd.png\" width=\"60%\" />\n",
         "</center>\n",
         "In practice, we'll often get faster results if we do not use neither the whole training set, nor only one training example, to perform each update. Mini-batch gradient descent uses an intermediate number of examples for each step. With mini-batch gradient descent, we loop over the mini-batches instead of looping over individual training examples (The illustration below comes from Andrew Ng's mooc).\n",
         "<center>\n",
-        "<img src=\"https://raw.githubusercontent.com/fabnancyuhp/DEEP-LEARNING/main/IMAGE/DENSENN/kiank_minibatch.png\" width=\"70%\" />\n",
+        "<img src=\"https://raw.githubusercontent.com/fabnancyuhp/DEEP-LEARNING/main/IMAGE/DENSENN/kiank_minibatch.png\" width=\"60%\" />\n",
         "</center>"
       ],
       "metadata": {
@@ -488,7 +503,7 @@
         "In dropout, we randomly shut down some fraction of a layer’s neurons at each training step by zeroing out the neuron values. The fraction of neurons to be zeroed out is known as the dropout rate $r_{d}$. The remaining neurons have their values multiplied by  $\\frac{1}{1 - r_{d}}$  so that the overall sum of the neuron values remains the same.\n",
         "The two images represent dropout applied to a 3 layers ANN.\n",
         "<center>\n",
-        "<img src=\"https://raw.githubusercontent.com/fabnancyuhp/DEEP-LEARNING/main/IMAGE/DENSENN/A-Dense-Fully-Connected-Neural-Network-with-and-without-Dropout.png\" width=\"55%\" />\n",
+        "<img src=\"https://raw.githubusercontent.com/fabnancyuhp/DEEP-LEARNING/main/IMAGE/DENSENN/A-Dense-Fully-Connected-Neural-Network-with-and-without-Dropout.png\" width=\"50%\" />\n",
         "</center>"
       ],
       "metadata": {
@@ -505,7 +520,7 @@
         "**IMAGES**<br>\n",
         "Images are a great way to illustrate data augmentation. In order to train an algorithm to recognize an image of a dog, you will need a training dataset that contains different images of a dog. In case of having too many images of a dog that look the same, you can enrich your training dataset with data augmentation to avoid overfitting.\n",
         "<center>\n",
-        "<img src=\"https://raw.githubusercontent.com/fabnancyuhp/DEEP-LEARNING/main/IMAGE/DENSENN/imageaugmentation.png\" width=\"40%\" />\n",
+        "<img src=\"https://raw.githubusercontent.com/fabnancyuhp/DEEP-LEARNING/main/IMAGE/DENSENN/imageaugmentation.png\" width=\"35%\" />\n",
         "</center>\n",
         "\n",
         "**TEXT**: For textual data it is also possible to apply adequate augmentations: one can introduce synonyms, manipulate punctuation, etc.<br><br>\n",
