--- a/NOTEBOOKS/artificial_neural_network.ipynb
+++ b/NOTEBOOKS/artificial_neural_network.ipynb
@@ -19,12 +19,23 @@
     },
     "colab": {
       "name": "artificial-neural-network.ipynb",
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     }
   },
   "nbformat_minor": 0,
   "nbformat": 4,
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/fabnancyuhp/DEEP-LEARNING/blob/main/NOTEBOOKS/artificial_neural_network.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "source": [
@@ -216,11 +227,15 @@
         "When we deal with a classification problem, the loss function can be chosen from the following:\n",
         "* categorical_crossentropy: \n",
         "<center>\n",
-        "<img src=\"https://raw.githubusercontent.com/fabnancyuhp/DEEP-LEARNING/main/IMAGE/DENSENN/loss1.png\" width=\"40%\" style=\"width:600px;margin:0-300px;\" />\n",
+        "<img src=\"https://raw.githubusercontent.com/fabnancyuhp/DEEP-LEARNING/main/IMAGE/DENSENN/loss1.png\" width=\"50%\" style=\"width:600px;margin:0-300px;\" />\n",
         "</center>\n",
         "\n",
         " where p is the output size and $\\hat{y}^{(i)}$ is a probability vector.\n",
-        "* binary_crossentropy (The target can contain multiple independent binary labels): $$\\mathcal{L}(\\hat{y}^{(i)},y^{(i)})=-\\frac{1}{m}\\sum_{k=1}^{p}y^{(i)}\\log(\\hat{y}^{(i)}_{k})+(1-y^{(i)}_{k})\\log(1-\\hat{y}^{(i)}_{k})$$ where p is the output size and $\\hat{y}^{(i)}_{k}$ is a probability vector.\n",
+        "* binary_crossentropy (The target can contain multiple independent binary labels): \n",
+        "<center>\n",
+        "<img src=\"https://raw.githubusercontent.com/fabnancyuhp/DEEP-LEARNING/main/IMAGE/DENSENN/loss2.png\" width=\"90%\"  />\n",
+        "</center>\n",
+        "where p is the output size and $\\hat{y}^{(i)}_{k}$ is a probability vector.\n",
         "\n",
         "When we deal with a regression problem, the loss function can be chosen from the following:\n",
         "* Mean squared error: $\\mathcal{L}(\\hat{y}^{(i)},y^{(i)})=\\frac{1}{p}\\sum_{k=1}^{p}(y^{(i)}_{k}-\\hat{y}^{(i)}_{k})^{2}$\n",
