--- a/NOTEBOOKS/Spiral_dataset_with_ANN.ipynb
+++ b/NOTEBOOKS/Spiral_dataset_with_ANN.ipynb
@@ -255,11 +255,11 @@
         "model.evaluate(X_test, y_test)"
       ],
       "metadata": {
-        "id": "c0cySHIEVqkW",
-        "outputId": "1c47c2fe-ec8a-4c4b-d9a1-7c51587d8ab0",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "c0cySHIEVqkW",
+        "outputId": "1c47c2fe-ec8a-4c4b-d9a1-7c51587d8ab0"
       },
       "execution_count": 42,
       "outputs": [
@@ -744,9 +744,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Exercise 3 \n",
+        "# Example 3 : sparse categorical crossentropy loss over 4 classes spiral dataset\n",
         "\n",
-        "https://www.machinecurve.com/index.php/2019/10/06/how-to-use-sparse-categorical-crossentropy-in-keras/<br>\n",
+        "\n",
         "Training a neural network involves passing data forward, through a model, and comparing predictions with ground truth labels. This comparison is done by a loss function. In multiclass classification problems, **categorical crossentropy** loss is the loss function of choice. However, it requires that your labels are one-hot encoded, which is not always the case.<br><br>\n",
         "\n",
         "In that case, **sparse categorical crossentropy** loss can be a good choice. This loss function performs the same type of loss – categorical crossentropy loss – but works on integer targets instead of one-hot encoded ones. Saves you that to_categorical step which is common with TensorFlow/Keras models!<br><br>\n",
@@ -817,11 +817,11 @@
         "np.unique(y)"
       ],
       "metadata": {
-        "id": "2ifK-cmE5XI5",
-        "outputId": "3b1a5a9c-c4a7-4934-b265-f69fc7d37c9d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "2ifK-cmE5XI5",
+        "outputId": "3b1a5a9c-c4a7-4934-b265-f69fc7d37c9d"
       },
       "execution_count": 96,
       "outputs": [
@@ -840,10 +840,27 @@
     {
       "cell_type": "markdown",
       "source": [
-        "When we use categorical crossentropy loss, we’ll have to convert our target into categorical format first – with one-hot encoding, or to_categorical in Keras. "
+        "When we use categorical crossentropy loss, we’ll have to convert our target into categorical format first – with one-hot encoding, or to_categorical in Keras. We’ll effectively transform your targets into this:\n",
+        "* For class 0: [1,0,0,0]\n",
+        "* For class 1: [0,1,0,0]\n",
+        "* For class 2: [0,0,1,0]\n",
+        "* For class 3: [0,0,0,1]\n",
+        "\n",
+        "However, when we have integer targets instead of categorical vectors as targets, we can use sparse categorical crossentropy. It’s an integer-based version of the categorical crossentropy loss function, which means that we don’t have to convert the targets into categorical format anymore."
       ],
       "metadata": {
         "id": "wfUAev-M5cVl"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**In the cell below we define a model that handles our classification problem.**<br><br> \n",
+        "\n",
+        "We have to notice our last Dense responsible for output a probability vector has 4+1 units. Generally, when we want to use sparse categorical, the last Dense layer has n+1 units, where n equals the unique number of classes in our dataset."
+      ],
+      "metadata": {
+        "id": "RfO7WDzg71U9"
       }
     },
     {
@@ -868,24 +885,35 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "**Now, we compile our model with SparseCategoricalCrossentropy**:"
+      ],
+      "metadata": {
+        "id": "98hnd6xa-jMI"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "import tensorflow as tf\n",
         "model_3.compile(loss=tf.keras.losses.SparseCategoricalCrossentropy(from_logits=True),optimizer='adam',\\\n",
-        "                metrics=[tf.keras.metrics.SparseCategoricalAccuracy()])\n",
-        "\n",
-        "#loss='sparse_categorical_crossentropy'\n",
-        "#loss=tensorflow.keras.losses.sparse_categorical_crossentropy\n",
-        "#model_3.compile(loss='sparse_categorical_crossentropy',optimizer='adam',metrics=['accuracy'])\n",
-        "\n",
-        "#loss=tf.keras.losses.SparseCategoricalCrossentropy(from_logits=True),\n",
-        "#metrics=[tf.keras.metrics.SparseCategoricalAccuracy()]"
+        "                metrics=[tf.keras.metrics.SparseCategoricalAccuracy()])"
       ],
       "metadata": {
         "id": "26wTB-PwTHmA"
       },
       "execution_count": 80,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**We split X, Y into a train set and a test set using train_test_split from the sklearn package.**"
+      ],
+      "metadata": {
+        "id": "7xJ5sOlg-vT2"
+      }
     },
     {
       "cell_type": "code",
@@ -900,17 +928,26 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "**We fit our model with 400 epochs:**"
+      ],
+      "metadata": {
+        "id": "D8UQRgnn_qFq"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "model_3.fit(X_train,y_train,epochs=400,verbose=0)\n",
         "#model_3.evaluate(x_test,y_test)"
       ],
       "metadata": {
-        "id": "kZJ6EwvcUOiZ",
-        "outputId": "a77c1214-6098-47d1-9594-6c8102fc44a6",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "kZJ6EwvcUOiZ",
+        "outputId": "a77c1214-6098-47d1-9594-6c8102fc44a6"
       },
       "execution_count": 82,
       "outputs": [
@@ -935,32 +972,33 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "**We evaluate our model over the test set**"
+      ],
+      "metadata": {
+        "id": "qR3PbQtI_0hJ"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "model_3.evaluate(X_test,y_test)"
       ],
       "metadata": {
-        "id": "leqPvd9jivxY",
-        "outputId": "6be402b8-63fd-4d6c-e4c8-b7e0426a810f",
+        "id": "alY76f3yC0k4",
+        "outputId": "29117605-1c5e-424b-b7e9-d56bb32fa819",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 84,
+      "execution_count": 98,
       "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "/usr/local/lib/python3.7/dist-packages/tensorflow/python/util/dispatch.py:1096: UserWarning: \"`sparse_categorical_crossentropy` received `from_logits=True`, but the `output` argument was produced by a sigmoid or softmax activation and thus does not represent logits. Was this intended?\"\n",
-            "  return dispatch_target(*args, **kwargs)\n"
-          ]
-        },
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "165/165 [==============================] - 1s 4ms/step - loss: 0.1201 - sparse_categorical_accuracy: 0.9566\n"
+            "165/165 [==============================] - 1s 8ms/step - loss: 0.1201 - sparse_categorical_accuracy: 0.9566\n"
           ]
         },
         {
@@ -971,101 +1009,35 @@
             ]
           },
           "metadata": {},
-          "execution_count": 84
+          "execution_count": 98
         }
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
-        "y"
+        "**We apply our model to a new sample:**\n",
+        "  * we pass our new sample to the model\n",
+        "  * we find the predicted class "
       ],
       "metadata": {
-        "id": "DomkHPOai2bE",
-        "outputId": "392c6a83-ee79-49fc-9f52-8ca6dc030bb7",
+        "id": "okGrtEKvDUng"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "vect_proba = model_3.predict(X_test[10].reshape(1,2))\n",
+        "vect_proba"
+      ],
+      "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": 60,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "array([0, 0, 0, ..., 3, 3, 3], dtype=uint8)"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 60
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "y_train.shape"
-      ],
-      "metadata": {
-        "id": "JZM_efeUi3o9",
-        "outputId": "24515889-4575-44cf-fa04-352767667702",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": 61,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "(10720,)"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 61
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "y_train"
-      ],
-      "metadata": {
-        "id": "H_HaGBSVjOfQ",
-        "outputId": "f5a0c12f-f220-4591-ef92-b605af999e93",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": 78,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "array([2, 2, 0, ..., 0, 3, 1], dtype=uint8)"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 78
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "model_3.predict(X_test[10].reshape(1,2))"
-      ],
-      "metadata": {
+        },
         "id": "bTjtXcnFnMTG",
-        "outputId": "99accbc5-d077-49c8-a8a5-24cd86cbc8c4",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "outputId": "09c4502b-441a-4156-bfa3-0808df73c939"
       },
-      "execution_count": 95,
+      "execution_count": 99,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1076,46 +1048,36 @@
             ]
           },
           "metadata": {},
-          "execution_count": 95
+          "execution_count": 99
         }
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        ""
+        "import numpy as np\n",
+        "predicted_class = np.argmax(vect_proba)\n",
+        "print(\"The true label is: \"+str(y_test[10]))\n",
+        "print(\"The predicted label is: \"+str(predicted_class))"
       ],
       "metadata": {
-        "id": "05ATzMRW2d5h",
-        "outputId": "bb384f52-0ef1-455d-98d4-edf5957e2c5a",
+        "id": "NZa0-0vnD6Xx",
+        "outputId": "f64c449f-a4fd-4a70-e8e7-9dcfc62339fb",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 94,
+      "execution_count": 103,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "(5280, 2)"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 94
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The true label is: 2\n",
+            "The predicted label is: 2\n"
+          ]
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        ""
-      ],
-      "metadata": {
-        "id": "8TSVYKSv3j1q"
-      },
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
