--- a/NOTEBOOKS/Spiral_dataset_with_ANN.ipynb
+++ b/NOTEBOOKS/Spiral_dataset_with_ANN.ipynb
@@ -876,12 +876,13 @@
         "model_3.add(BatchNormalization())\n",
         "model_3.add(Dense(5,activation='tanh'))\n",
         "model_3.add(BatchNormalization())\n",
-        "model_3.add(Dense(5,activation='softmax'))"
+        "model_3.add(Dense(5,activation='softmax'))\n",
+        "#model_3.add(Dense(5,activation='softmax'))"
       ],
       "metadata": {
         "id": "eCIgsDxEEfYg"
       },
-      "execution_count": 79,
+      "execution_count": 118,
       "outputs": []
     },
     {
@@ -897,13 +898,15 @@
       "cell_type": "code",
       "source": [
         "import tensorflow as tf\n",
-        "model_3.compile(loss=tf.keras.losses.SparseCategoricalCrossentropy(from_logits=True),optimizer='adam',\\\n",
-        "                metrics=[tf.keras.metrics.SparseCategoricalAccuracy()])"
+        "#from_logits=True\n",
+        "model_3.compile(loss=tf.keras.losses.SparseCategoricalCrossentropy(),optimizer='adam',\\\n",
+        "                metrics=['Accuracy'])\n",
+        "#tf.keras.metrics.SparseCategoricalAccuracy()"
       ],
       "metadata": {
         "id": "26wTB-PwTHmA"
       },
-      "execution_count": 80,
+      "execution_count": 119,
       "outputs": []
     },
     {
@@ -947,27 +950,19 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "kZJ6EwvcUOiZ",
-        "outputId": "a77c1214-6098-47d1-9594-6c8102fc44a6"
+        "outputId": "bcd5c96c-4117-41b1-ef45-7505ffa48481"
       },
-      "execution_count": 82,
+      "execution_count": 120,
       "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "/usr/local/lib/python3.7/dist-packages/tensorflow/python/util/dispatch.py:1096: UserWarning: \"`sparse_categorical_crossentropy` received `from_logits=True`, but the `output` argument was produced by a sigmoid or softmax activation and thus does not represent logits. Was this intended?\"\n",
-            "  return dispatch_target(*args, **kwargs)\n"
-          ]
-        },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<keras.callbacks.History at 0x7f910c925550>"
+              "<keras.callbacks.History at 0x7f910e8eac10>"
             ]
           },
           "metadata": {},
-          "execution_count": 82
+          "execution_count": 120
         }
       ]
     },
@@ -986,30 +981,30 @@
         "model_3.evaluate(X_test,y_test)"
       ],
       "metadata": {
-        "id": "alY76f3yC0k4",
-        "outputId": "29117605-1c5e-424b-b7e9-d56bb32fa819",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "alY76f3yC0k4",
+        "outputId": "b1834f7a-ffa9-4f3a-ed24-c63b1f4a8240"
       },
-      "execution_count": 98,
+      "execution_count": 121,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "165/165 [==============================] - 1s 8ms/step - loss: 0.1201 - sparse_categorical_accuracy: 0.9566\n"
+            "165/165 [==============================] - 1s 2ms/step - loss: 0.1320 - Accuracy: 0.9513\n"
           ]
         },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "[0.12005665153265, 0.9566287994384766]"
+              "[0.13198445737361908, 0.9513257741928101]"
             ]
           },
           "metadata": {},
-          "execution_count": 98
+          "execution_count": 121
         }
       ]
     },
@@ -1035,20 +1030,27 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "bTjtXcnFnMTG",
-        "outputId": "09c4502b-441a-4156-bfa3-0808df73c939"
+        "outputId": "21aab2e4-1a7f-4f22-e1f8-feb3a91bffdf"
       },
-      "execution_count": 99,
+      "execution_count": 122,
       "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "WARNING:tensorflow:5 out of the last 8 calls to <function Model.make_predict_function.<locals>.predict_function at 0x7f910d14d7a0> triggered tf.function retracing. Tracing is expensive and the excessive number of tracings could be due to (1) creating @tf.function repeatedly in a loop, (2) passing tensors with different shapes, (3) passing Python objects instead of tensors. For (1), please define your @tf.function outside of the loop. For (2), @tf.function has experimental_relax_shapes=True option that relaxes argument shapes that can avoid unnecessary retracing. For (3), please refer to https://www.tensorflow.org/guide/function#controlling_retracing and https://www.tensorflow.org/api_docs/python/tf/function for  more details.\n"
+          ]
+        },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "array([[1.1520664e-06, 1.0422052e-07, 9.9999869e-01, 1.2430806e-08,\n",
-              "        5.2563655e-11]], dtype=float32)"
+              "array([[9.3957424e-05, 4.1553484e-08, 9.9989319e-01, 1.2802341e-05,\n",
+              "        2.2788412e-12]], dtype=float32)"
             ]
           },
           "metadata": {},
-          "execution_count": 99
+          "execution_count": 122
         }
       ]
     },
@@ -1061,13 +1063,13 @@
         "print(\"The predicted label is: \"+str(predicted_class))"
       ],
       "metadata": {
-        "id": "NZa0-0vnD6Xx",
-        "outputId": "f64c449f-a4fd-4a70-e8e7-9dcfc62339fb",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "NZa0-0vnD6Xx",
+        "outputId": "46fcaadf-1b20-4ae7-c3e1-d741db5aafcb"
       },
-      "execution_count": 103,
+      "execution_count": 123,
       "outputs": [
         {
           "output_type": "stream",
@@ -1078,6 +1080,17 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "5rIWBSALG5Ny"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
