--- a/NOTEBOOKS/CLASSIFICATION_ANNs_ON_STRUTURED_DATA.ipynb
+++ b/NOTEBOOKS/CLASSIFICATION_ANNs_ON_STRUTURED_DATA.ipynb
@@ -325,7 +325,8 @@
         "le = preprocessing.LabelEncoder()\n",
         "le.fit(Y['Species'].unique())\n",
         "\n",
-        "Y_encode = le.transform(Y['Species'])"
+        "Y_encode = le.transform(Y['Species'])\n",
+        "le.inverse_transform([0,1,2])"
       ],
       "metadata": {
         "execution": {
@@ -336,17 +337,34 @@
           "shell.execute_reply": "2021-08-24T07:01:39.643277Z"
         },
         "trusted": true,
-        "id": "wG1sIxmxOBGP"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "wG1sIxmxOBGP",
+        "outputId": "b88e10cb-3b05-49e7-c44e-9bbbe91f7a11"
       },
-      "execution_count": 9,
-      "outputs": []
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array(['Iris-setosa', 'Iris-versicolor', 'Iris-virginica'], dtype=object)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 11
+        }
+      ]
     },
     {
       "cell_type": "markdown",
       "source": [
         "When we deal with a multiclass classification, we use the cross-entropy loss function. There are two ways of using the cross-entropy loss in tensorflow.keras:\n",
         "* tf.keras.losses.CategoricalCrossentropy\n",
-        "* tf.keras.losses.SparseCategoricalCrossentropy"
+        "* tf.keras.losses.SparseCategoricalCrossentropy\n",
+        "\n",
+        "When "
       ],
       "metadata": {
         "id": "zbMwXIKTBUWH"
