--- a/NOTEBOOKS/CLASSIFICATION_ANNs_ON_STRUTURED_DATA.ipynb
+++ b/NOTEBOOKS/CLASSIFICATION_ANNs_ON_STRUTURED_DATA.ipynb
@@ -360,15 +360,33 @@
     {
       "cell_type": "markdown",
       "source": [
+        "## Categorizing target values\n",
         "When we deal with a multiclass classification, we use the cross-entropy loss function. There are two ways of using the cross-entropy loss in tensorflow.keras:\n",
         "* tf.keras.losses.CategoricalCrossentropy\n",
         "* tf.keras.losses.SparseCategoricalCrossentropy\n",
         "\n",
-        "When "
+        "When we use tf.keras.losses.CategoricalCrossentropy, we’ll have to convert the target values into categorical format first – with one-hot encoding, or to_categorical in Keras.<br><br>\n",
+        "\n",
+        "When we have integer targets instead of categorical vectors as targets, we can use sparse categorical crossentropy. It’s an integer-based version of the categorical crossentropy loss function, which means that we don’t have to convert the targets into categorical format anymore.\n",
+        "\n",
+        "https://www.machinecurve.com/index.php/2019/10/06/how-to-use-sparse-categorical-crossentropy-in-keras/"
       ],
       "metadata": {
         "id": "zbMwXIKTBUWH"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from tensorflow.keras.utils import to_categorical\n",
+        "\n",
+        "Y_vect_cat = to_categorical(Y_encode,)"
+      ],
+      "metadata": {
+        "id": "Zoy-JH-iXA34"
+      },
+      "execution_count": 12,
+      "outputs": []
     },
     {
       "cell_type": "code",
