--- a/NOTEBOOKS/CLASSIFICATION_ANNs_ON_STRUTURED_DATA.ipynb
+++ b/NOTEBOOKS/CLASSIFICATION_ANNs_ON_STRUTURED_DATA.ipynb
@@ -380,25 +380,46 @@
       "source": [
         "from tensorflow.keras.utils import to_categorical\n",
         "\n",
-        "Y_vect_cat = to_categorical(Y_encode,)"
+        "Y_vect_cat = to_categorical(Y_encode,num_classes=3)\n",
+        "Y_vect_cat[0:2]"
       ],
       "metadata": {
-        "id": "Zoy-JH-iXA34"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Zoy-JH-iXA34",
+        "outputId": "297a3c01-45fe-4b36-cbda-137d710381ee"
       },
-      "execution_count": 12,
-      "outputs": []
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[1., 0., 0.],\n",
+              "       [1., 0., 0.]], dtype=float32)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 16
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Split into a training set and test set"
+      ],
+      "metadata": {
+        "id": "3ToK3whDZH7h"
+      }
     },
     {
       "cell_type": "code",
       "source": [
         "from sklearn.model_selection import train_test_split\n",
         "\n",
-        "X_train, X_test, y_train, y_test = train_test_split(X, Y_encode, test_size=0.3, random_state=42)\n",
-        "\n",
-        "#\n",
-        "from tensorflow.keras.utils import to_categorical\n",
-        "y_train = to_categorical(y_train)\n",
-        "y_test = to_categorical(y_test)"
+        "X_train, X_test, y_train, y_test = train_test_split(X, Y_vect_cat, test_size=0.3, random_state=42)"
       ],
       "metadata": {
         "id": "1nG_ZYaWBUxz"
